{
    "name": "Player Controls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "76e08885-42cd-4dc1-9245-ea0b1803d90b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "aa9a3cc3-5c22-429c-924b-30a7bbf84726",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "74e728bb-b6bb-4090-ad7f-c1e35d494175",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "12d7d2ab-24dc-4ab5-86d9-9048ff0436cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "50c8ed31-ada8-4939-88b0-d72f976cfd69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a82f3f37-3ba1-4ba7-9fa9-61cf905e5190",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5e005f08-2d4b-41aa-a31a-6d6db510f9e7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "e2e1ca74-2cdd-423c-b049-7b0b2b4c099d",
            "actions": [
                {
                    "name": "CameraControls",
                    "type": "PassThrough",
                    "id": "ebc6eb65-0f9d-4ed0-a392-5fc0999cf36b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "099f7a03-5768-42ce-a43f-9fa016904221",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "4522143f-10d7-4937-8a0e-c9781a115ec0",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "676a3516-5fba-4294-b67c-22679bb2446c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "436f5e05-0d59-479f-ad17-7c328c3acaf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandSwingWeapon",
                    "type": "Button",
                    "id": "c793fd2e-3705-482d-b9df-0715c3bcef0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7df778f7-6970-4a8b-ae00-bd818754c22a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a71f3402-795e-4fe8-a3aa-a9bd02e60ada",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28aa17df-01c9-43aa-8a9c-41518cfeae91",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a25b3b03-1c7a-485f-b030-751f583b3b25",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandSwingWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b027a0b4-ae8f-47de-8aa4-45d2869c174c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}